@@ -5,7 +5,8 @@
 Changes from 2.1 to 2.1.1
 =========================
 
-[Add notes here]
+* [FIX] Modulus with zero with integers no longer crashes the
+  interpreter.  It nows puts a zero in the result.  Fixes #107.
 
 
 Changes from 2.0.1 to 2.1
